# dolphin-memory-reader

./: .gitignore  Cargo.toml  LICENSE  README.md  index.d.ts  index.js  index.node  package-lock.json  package.json  tsconfig.json
.github/workflows/: npm-publish.yml
src/: discord.rs  dolphin_mem.rs  lib.rs  main.rs  melee.rs
src/melee/: dolphin_mem.rs  multiman.rs
src/node/: index.d.ts  index.ts
src/node/types/: enum.ts
