[package]
name = "dolphin-memory-reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories = "5.0.0"
encoding_rs = "0.8.32"
lazy_static = "1.4.0"
num_enum = "0.7.0"
open = "5.0.0"
preferences = { git = "https://github.com/andybarron/preferences-rs" }
regex = "1.8.1"
ruspiro-singleton = "0.4.3"
serde_derive = "1.0.160"
serde_json = "1.0.96"
single-instance = "0.3.3"
structstruck = "0.4.1"
strum = "0.25.0"
strum_macros = "0.25.2"
trayicon = "0.1.3"
windows = { version = "0.51.1", features = ["Win32_Foundation", "Win32_System_Threading", "Win32_System_Memory", "Win32_System_Diagnostics_ToolHelp", "Win32_System_Diagnostics_Debug", "Win32_System_ProcessStatus", "Win32_UI_WindowsAndMessaging"] }
