[package]
name = "dolphin-memory-reader"
version = "0.1.0"
edition = "2021"
exclude = ["index.node"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
directories = "5.0.0"
encoding_rs = "0.8.32"
lazy_static = "1.4.0"
num = "0.4"
num-derive = "0.4.1"
num_enum = "0.7.0"
num-traits = "0.2"
open = "5.0.0"
regex = "1.8.1"
serde = { version = "1.0.160", features = ["derive"] }
serde_derive = "1.0.160"
serde_json = "1.0.96"
structstruck = "0.4.1"
strum = "0.25.0"
strum_macros = "0.25.2"
windows = { version = "0.48.0", features = ["Win32_Foundation", "Win32_System_Threading", "Win32_System_Memory", "Win32_System_Diagnostics_ToolHelp", "Win32_System_Diagnostics_Debug", "Win32_System_ProcessStatus", "Win32_UI_WindowsAndMessaging"] }

[dependencies.neon]
version = "0.10.1"
default-features = false
features = ["napi-6", "channel-api", "promise-api", "try-catch-api"]
